exports[`Code Block > Bulleted code block 1`] = `
[
  {
    "indent": 1,
    "type": "codeBlock",
    "fileName": "hello.js",
    "content": "function () {\\n  alert(document.location.href)\\n  console.log(\\"hello\\")\\n  // You can also write comments!\\n}"
  }
]
`;

exports[`Code Block > Code block with bullet 1`] = `
[
  {
    "indent": 1,
    "type": "line",
    "nodes": [
      {
        "type": "plain",
        "raw": "Bullet",
        "text": "Bullet"
      }
    ]
  },
  {
    "indent": 1,
    "type": "codeBlock",
    "fileName": "hello.js",
    "content": "function () {\\n  alert(document.location.href)\\n  console.log(\\"hello\\")\\n  // You can also write comments!\\n}"
  },
  {
    "indent": 1,
    "type": "line",
    "nodes": [
      {
        "type": "plain",
        "raw": "Bullet",
        "text": "Bullet"
      }
    ]
  }
]
`;

exports[`Code Block > Consecutive code blocks 1`] = `
[
  {
    "indent": 0,
    "type": "codeBlock",
    "fileName": "hello.js",
    "content": "function () {\\n  alert(document.location.href)\\n  console.log(\\"hello\\")\\n  // You can also write comments!\\n}"
  },
  {
    "indent": 0,
    "type": "codeBlock",
    "fileName": "hello.js",
    "content": "function () {\\n  alert(document.location.href)\\n  console.log(\\"hello\\")\\n  // You can also write comments!\\n}"
  }
]
`;

exports[`Code Block > Simple code block 1`] = `
[
  {
    "indent": 0,
    "type": "codeBlock",
    "fileName": "hello.js",
    "content": "function () {\\n  alert(document.location.href)\\n  console.log(\\"hello\\")\\n  // You can also write comments!\\n}"
  }
]
`;
